force-app/main/default/objects/Customer_Shipping_Address__c/Customer_Shipping_Address__c.object-meta.xml
<CustomObject>
    <label>Customer Shipping Address</label>
    <nameField>
        <displayFormat>CSA-{000000}</displayFormat>
        <label>Customer Shipping Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>