force-app/main/default/objects/Customer_Shipping_Address__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Shipping Addresses</relationshipLabel>
    <relationshipName>Customer_Shipping_Address</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>