force-app/main/default/objects/Customer_Shipping_Address__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>详细地址</description>
    <label>Detailed Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>