force-app/main/default/objects/Customer_Shipping_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>